# Supavelte-CSR

./: .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  capacitor.config.ts  eslint.config.js  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  renovate.json  svelte.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
.husky/: pre-commit
.storybook/: main.ts  preview.ts
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
scripts/: typegen.js
src/: app.d.ts  app.html  hooks.server.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json  mobile.json
src-tauri/src/: main.rs
src-tauri/supabase/: config.toml
src/components/: Navbar.svelte
src/components/auth/: AuthInput.svelte
src/lib/: Supabase.ts
src/lib/components/: TopNav.svelte
src/lib/components/auth/: AuthField.svelte
src/lib/components/button/: GoAppButton.svelte
src/lib/stores/: SessionStore.ts  StateStore.ts  session.ts  state.ts
src/lib/types/: Supabase.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(page)/: +layout.svelte  +page.svelte
src/routes/(public)/: +layout.svelte  +page.svelte
src/routes/app/: +layout.server.ts  +layout.svelte  +page.svelte
src/stories/: Configure.mdx  auth.stories.ts
supabase/: config.toml
(+14 files in other folders)
